--- a/prefect-rbac.yaml
+++ b/prefect-rbac.yaml
@@ -1,21 +1,19 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: default
+  namespace: staging
   name: prefect-agent-rbac
 rules:
 - apiGroups: ["batch", "extensions"]
   resources: ["jobs"]
   verbs: ["*"]
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["*"]
 
 ---
+
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
-  namespace: default
+  namespace: staging
   name: prefect-agent-rbac
 subjects:
   - kind: ServiceAccount
@@ -24,3 +22,4 @@ roleRef:
   kind: Role
   name: prefect-agent-rbac
   apiGroup: rbac.authorization.k8s.io
+
